--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,15 @@
   border: 1px solid darkgrey;
 }*/
 
+#charSelectRow, #enemiesRow, #combatRow {
+  margin-top: 5px;
+}
+
+#enemiesRow {
+  border: 2px solid #fee73b;
+  border-radius: 10px;
+}
+
 button {
   width: auto;
 }
@@ -21,7 +30,31 @@ button {
 }
 
 .select {
-  padding: 0;
+  padding: 1px;
+}
+
+.light-side:hover {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 12px skyblue;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+
+.dark-side:hover {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 12px crimson;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
 }
 
 .enemyRow{
@@ -54,4 +87,5 @@ h1 {
   font-size: 84px;
   position: absolute;
   bottom: 10%;
+  margin-left: 7px;
 }
